rustler_codegen/tests/ui/derive-rename-invalid.stderr
error: proc-macro derive panicked
 --> tests/ui/derive-rename-invalid.rs:3:10
  |
3 | #[derive(NifMap)]
  |          ^^^^^^
  |
  = help: message: expected `=`
